add dark mode + Home page

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <title>Shop Youssef</title>
 </head>
 
-<body class="bg-light">
+<body class="">
   <div id="root"></div>
   <script type="module" src="/src/main.tsx"></script>
 </body>
